--- a/WebSystem/home.html
+++ b/WebSystem/home.html
@@ -5,6 +5,8 @@
     </head>
     <body>
         <h1>CVFS Web Admin Panel</h1>
-        <a href="decomnode.php">Decommission a Node</a>
+        <h2>ISCSI Target</h2>
+        <a href="decomnode.php">Decommission Server</a>
+        <a href="addtarget.php">Add Target</a>
     </body>
 </html>
