--- a/WebSystem/home.html
+++ b/WebSystem/home.html
@@ -8,5 +8,6 @@
         <h2>ISCSI Target</h2>
         <a href="decomnode.php">Decommission Server</a>
         <a href="addtarget.php">Add Target</a>
+        <a href="auditlogs.php">Audit Log</a>
     </body>
 </html>
