--- a/WebSystem/home.html
+++ b/WebSystem/home.html
@@ -9,5 +9,6 @@
         <a href="decomnode.php">Decommission Server</a>
         <a href="addtarget.php">Add Target</a>
         <a href="auditlogs.php">Audit Log</a>
+        <a href="systemlogs.php">System Log</a>
     </body>
 </html>
